src/test/run-pass/issue-2311.rs
trait clam<A> { }
trait foo<A> {
   fn bar<B,C:clam<A>>(c: C) -> B;
}

fn main() { }
